adding more files and code from popups plugin

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "type": "wordpress-plugin",
   "require": {
     "timersys/geot-functions": "dev-master",
-    "timersys/geotargetingwp": "dev-master"
+    "timersys/geotargetingwp": "dev-master",
+    "mobiledetect/mobiledetectlib": "^2.8"
   }
 }
